--- a/css/complement.css
+++ b/css/complement.css
@@ -56,11 +56,9 @@ h3.underline{
 {
     background-color: #222;
     padding:0;
-    margin-left: 8.33333333%;
     position: relative;
     border: 1px solid #292626;
     color:#9d9d9d;
-    width:83.33333333%;
     float:left;
     margin-bottom: 15px;
 }
@@ -123,18 +121,90 @@ h3.underline{
 
 
 /*--------------------------- Bouton barre_page ----------------------*/
-.button_pagination a
+.pagination_top, .pagination_bottom
 {
-    padding: 6px 12px;
-    width:20%;
-    background-color: #fff;
-    border: 1px solid #ddd;
+    float:left;
+    width:100%;
+    background: #dad8d8;
 }
-.button_pagination
+.pagination_top
 {
-    float:left;margin:20px 0;
+    margin-bottom:30px;
+}
+.pagination_left, .pagination_right
+{
+    padding:5px 5px;
+}
+.pagination_left
+{
+    float:left;
+}
+.pagination_right
+{
+    float:right;
 }
 
+.trie, .ordre, .valider, .ordre label, .ordre select, .trie label, .trie select, .num_by_page, .num_page_left, .num_page_right
+{
+    float:left;
+    margin:0 2px;
+    padding:0;
+}
+.num_by_page, .num_page_left, .num_page_right
+{
+    font-weight: 700;
+}
+.ordre
+{
+    margin:0 10px;
+}
+.valider
+{
+    padding:0 5px;
+}
+.pagination_top input[type=submit]
+{
+    -webkit-appearance: push-button;
+}
+.num_page
+{
+    float:left;
+    padding:0 5px;
+    margin:auto 2px;
+    border:1px solid #b2b2b2;
+    background-color: #e9e9e9;
+    width:28px;
+    text-align: center;
+    color: #333;
+}
+.num_page_left
+{
+    margin-right:10px;
+}
+.num_page_right
+{
+    margin-left:10px;
+}
+
+.num_page:hover
+{
+    border:1px solid #940b13;
+    color: #940b13;
+}
+.page_curent, .page_curent:hover
+{
+    color: #940b13;
+    border:1px solid #940b13;
+    background-color: #e9e9e9;
+}
+.num_page span
+{
+    color:inherit;
+    top: 2px;
+    font-weight: 700;
+    line-height: normal;
+    display: inline;
+}
 
 /*------------------------------- header Machiavel Fantasy -------------------------------------------*/
 .page-header
@@ -197,6 +267,7 @@ nav.navbar.navbar-inverse
     border:1px solid #717479;
     border-radius:4px;
     background-color: #E8EAEC;
+    margin-bottom: 30px;
 }
 .liste_jeu div
 {
