--- a/css/complement.css
+++ b/css/complement.css
@@ -625,10 +625,11 @@ div.ui-datepicker{
 }
 .text_info ul
 {
+    position:relative;/*pour scroll bar*/
     overflow:auto;
     width:100%;
     max-height: 150px;
-    float:left;
+    /*float:left;*/
     border:3px solid #cccaca;
     list-style:none;
     padding:0 5px;
