Mise à jour de la documentation et ajout d'images pour la documentation

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -252,13 +252,13 @@ div
     text-decoration: none;
     font-weight: bold;
     color: #1180B7;
-    background: transparent url("../admin/images/arrow_right.gif") 0% 50% no-repeat;
+    background: transparent url("../images/arrow_right.gif") 0% 50% no-repeat;
 }
 
 #menu li#activemenu a span:hover {
     text-decoration: none;
     color: #c30001;
-    background: transparent url("../admin/images/arrow_right.gif") 1% 50% no-repeat;
+    background: transparent url("../images/arrow_right.gif") 1% 50% no-repeat;
     background-color: #f4e4eb;
 }
 
@@ -329,7 +329,7 @@ table {
 th {
     padding: 3px 4px;
     color: #FFFFFF;
-    background: #70AED3 url("../admin/images/gradient2b.gif") bottom left repeat-x;
+    background: #70AED3 url("../images/gradient2b.gif") bottom left repeat-x;
     border-top: 1px solid #6DACD2;
     border-bottom: 1px solid #327AA5;
     text-align: left;
@@ -493,7 +493,7 @@ input.button2 {
     font-family: "Lucida Grande", Verdana, Helvetica, Arial, sans-serif;
     color: #000;
     font-size: 0.85em;
-    background: #EFEFEF url("../admin/images/bg_button.gif") repeat-x top;
+    background: #EFEFEF url("../images/bg_button.gif") repeat-x top;
     cursor: pointer;
 }
 input.button2:hover
